K8s/jenkins/ngnix.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp12
  labels:
    name: myapp
spec:
  containers:
  - name: myapp1
    image: nginx 
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
