K8s/jenkins/jenkins_ssh_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service-ssh
  namespace: devops-tools
spec:
  selector:
    app: jenkins-server
  type: NodePort
  ports:
      - port: 22
        targetPort: 22
        nodePort: 32222
