K8s/jenkins/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: myapp
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
