K8s/jenkins/ingress_nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: devops-tools
  labels:
    name: nginx-ingress
spec:
  rules:
  - host: nginx.akamai.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx1
            port: 
              number: 80
