K8s/jenkins/ingress_test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  
  
  name: hello-world
  
spec:
  ingressClassName: nginx
  rules:
  
  - host: monitor1.meops.akadevqa.com
    http:
      paths:
      - backend:
          service:
            name: nginx1
            port:
              number: 80
        path: /
        pathType: Prefix
  
status:
  loadBalancer:
    ingress:
    - ip: 198.18.90.22
